# game-terminal-openwolrd-fantasy

./: .gitignore  README.md  pixel_fantasy_openskill.py
Game-Terminal-Openwolrd-Fantasy/projects/openworld-fantasy/: .gitignore  README.md  game-start  pyproject.toml
Game-Terminal-Openwolrd-Fantasy/projects/openworld-fantasy/data/: levels.yaml
Game-Terminal-Openwolrd-Fantasy/projects/openworld-fantasy/docs/: APPRAISAL_GUIDE.md  ARCHITECTURE.md  ARENA_WO1.md  BAG_SYSTEM.md  CHEST_LOOT_VISION.md  COMBAT_ATB.md  COMBAT_IDENTITY_GUIDE.md  COMBO_MIND_VISION.md  COMBO_UNIT.md  COMMAND_AND_INSTANCE_IDS.md  CRAFT_SYSTEM.md  DAMAGE_DEFENSE_VISION.md  DAMAGE_PIPELINE.md  DIVINE_BURDEN_VISION.md  DUNGEON.md  EQUIP_LOADOUT_VISION.md  GROWTH_GUIDE.md  HELP_SITUATION_VISION.md  IMPROVEMENT_PLAN.md  ITEM_CONTENT_PLAN.md  ITEM_ECONOMY.md  ITEM_LOOT_ECONOMY_WO.md  MARKET.md  MISSION_BOARD.md  MODE_SHELL_DESIGN.md  MONSTER_CONTENT_PLAN.md  MONSTER_DIVERSITY_WO.md  MONSTER_DROPS.md  NARRATIVE.md  NEEDS_COMBAT_FOOD_VISION.md  NEEDS_PHASE1_DESIGN.md  OCCUPATION_PROGRESSION.md  OCCUPATION_STATS_BLESSING.md  PARTY_INVENTORY.md  PERSONALITY.md  PERSONAL_SYSTEM_GUIDE.md  PHASES.md  PLAYTEST_LOG.md  RARITY.md  RELIC_ALERT_PLAN.md  (+27 more)
Game-Terminal-Openwolrd-Fantasy/projects/openworld-fantasy/game/: __main__.py  app.py  config.py  host.py  host_main.py
Game-Terminal-Openwolrd-Fantasy/projects/openworld-fantasy/scripts/: game-start  wo026_playtest_harness.py  wo028_playtest_harness.py  wo030_human_playtest.py  wo031_area_loop_check.py  wo032_area_loop_check.py  wo036_stat_playtest.py  (+18 more)
(+772 files in other folders)
