[project]
name = "openworld-fantasy"
version = "0.8.0"
description = "Terminal open-world fantasy RPG (text-only, data-driven)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.6"]
data = ["pydantic>=2.0"]
color = ["rich>=13.0"]

[project.scripts]
openworld-fantasy = "game.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["game*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py39"
